--- a/Tema.html
+++ b/Tema.html
@@ -9,11 +9,11 @@
     <header>
         <h1>Tema Libre</h1>
         <nav>
-        <a href="MiBiografía(Home).html#SobreMi">Sobre mí</a> |
-        <a href="MiBiografía(Home).html#Libros">Mis libros favoritos</a> |
-        <a href="MiBiografía(Home).html#Peliculas">Mis películas favoritas</a> |
-        <a href="MiBiografía(Home).html#Canciones">Canciones favoritas</a> |
-        <a href="MiBiografía(Home).html#Multimedia">Multimedia</a> |      
+        <a href="index.html#SobreMi">Sobre mí</a> |
+        <a href="index.html#Libros">Mis libros favoritos</a> |
+        <a href="index.html#Peliculas">Mis películas favoritas</a> |
+        <a href="index.html#Canciones">Canciones favoritas</a> |
+        <a href="index.html#Multimedia">Multimedia</a> |      
         <a href="Currículo HTML.html">Datos Personales</a> | 
         <a href="Tema.html">Deportes</a>
         </nav>
@@ -60,4 +60,5 @@
     <p>&copy; 2025 - Edward Camaño & Emanuel González - Ingeniería WEB</p>
   </footer>
 </body>
+
 </html>
