--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -9,10 +9,10 @@
     <header>
         <h1>Formulario</h1>
         <nav>
-            <a href="MiBiografia(Home).html#sobre-mi">Sobre mí</a> | 
-            <a href="MiBiografia(Home).html#libros">Libros</a> | 
-            <a href="MiBiografia(Home).html#peliculas">Películas</a> | 
-            <a href="MiBiografia(Home).html#canciones">Canciones Favoritas</a> | 
+            <a href="index.html#sobre-mi">Sobre mí</a> | 
+            <a href="index.html#libros">Libros</a> | 
+            <a href="index.html#peliculas">Películas</a> | 
+            <a href="index.html#canciones">Canciones Favoritas</a> | 
             <a href="Currículo HTML.html">Datos Personales</a> | 
             <a href="Tema.html">Deportes</a>
         </nav>
@@ -67,4 +67,5 @@
     <p>&copy; - 2025 - Edward Camaño & Emanuel González - Curso de Programación Web</p>
   </footer>
 </body>
+
 </html>
