--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -9,10 +9,10 @@
     <header>
         <h1>Formulario</h1>
         <nav>
-            <a href="index.html#sobre-mi">Sobre mí</a> | 
-            <a href="index.html#libros">Libros</a> | 
-            <a href="index.html#peliculas">Películas</a> | 
-            <a href="index.html#canciones">Canciones Favoritas</a> | 
+            <a href="index.html#SobreMI">Sobre mí</a> | 
+            <a href="index.html#Libros">Libros</a> | 
+            <a href="index.html#Peliculas">Películas</a> | 
+            <a href="index.html#Canciones">Canciones Favoritas</a> | 
             <a href="Currículo HTML.html">Datos Personales</a> | 
             <a href="Tema.html">Deportes</a>
         </nav>
@@ -69,3 +69,4 @@
 </body>
 
 </html>
+
