--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -13,6 +13,7 @@
             <a href="index.html#Libros">Libros</a> | 
             <a href="index.html#Peliculas">Películas</a> | 
             <a href="index.html#Canciones">Canciones Favoritas</a> | 
+            <a href="index.html#Multimedia">Multimedia</a> | 
             <a href="Currículo HTML.html">Datos Personales</a> | 
             <a href="Tema.html">Deportes</a>
         </nav>
@@ -69,4 +70,5 @@
 </body>
 
 </html>
+
 
