--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Currículo HTML - Emanuel González</title>
+    <title>Currículo HTML -  Edward Camaño & Emanuel González</title>
 </head>
 <body>
     <header>
@@ -70,5 +70,6 @@
 </body>
 
 </html>
+
 
 
