--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -65,11 +65,12 @@
   <!-- PIE DE PÁGINA -->
   <footer>
     <hr>
-    <p>&copy; - 2025 - Edward Camaño & Emanuel González - Curso de Programación Web</p>
+    <p>&copy; 2025 - Edward Camaño & Emanuel González - Ingeniería WEB</p>
   </footer>
 </body>
 
 </html>
+
 
 
 
