--- a/Tema.html
+++ b/Tema.html
@@ -9,11 +9,11 @@
     <header>
         <h1>Tema Libre</h1>
         <nav>
-        <a href="index.html#SobreMi">Sobre mí</a> |
-        <a href="index.html#Libros">Mis libros favoritos</a> |
-        <a href="index.html#Peliculas">Mis películas favoritas</a> |
-        <a href="index.html#Canciones">Canciones favoritas</a> |
-        <a href="index.html#Multimedia">Multimedia</a> |      
+        <a href="Biografia(home).html#SobreMi">Sobre mí</a> |
+        <a href="Biografia(home).html#Libros">Mis libros favoritos</a> |
+        <a href="Biografia(home)#Peliculas">Mis películas favoritas</a> |
+        <a href="Biografia(home)#Canciones">Canciones favoritas</a> |
+        <a href="Biografia(home)#Multimedia">Multimedia</a> |      
         <a href="Currículo HTML.html">Datos Personales</a> | 
         <a href="Tema.html">Deportes</a>
         </nav>
@@ -66,6 +66,7 @@
 </body>
 
 </html>
+
 
 
 
