--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -9,11 +9,11 @@
     <header>
         <h1>Formulario</h1>
         <nav>
-            <a href="index.html#SobreMI">Sobre mí</a> | 
-            <a href="index.html#Libros">Libros</a> | 
-            <a href="index.html#Peliculas">Películas</a> | 
-            <a href="index.html#Canciones">Canciones Favoritas</a> | 
-            <a href="index.html#Multimedia">Multimedia</a> | 
+            <a href="Biografia(home).html#SobreMi">Sobre mí</a> |
+            <a href="Biografia(home).html#Libros">Mis libros favoritos</a> |
+            <a href="Biografia(home)#Peliculas">Mis películas favoritas</a> |
+            <a href="Biografia(home)#Canciones">Canciones favoritas</a> |
+            <a href="Biografia(home)#Multimedia">Multimedia</a> |      
             <a href="Currículo HTML.html">Datos Personales</a> | 
             <a href="Tema.html">Deportes</a>
         </nav>
@@ -70,6 +70,7 @@
 </body>
 
 </html>
+
 
 
 
