--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
     <h1>Equipo No 13 de Ingeniería Web<br>Tarea No. 2 — Repaso de HTML</h1>
     <nav>
       <a href="index.html">Inicio</a> | 
-      <a href="MiBiografia_EGonzález.html#SobreMiG">Sobre mí - Emanuel González</a> | 
-      <a href="MiBiografia_ECamaño.html#SobreMiC">Sobre mí - Edward Camaño</a> | 
-      <a href="MiBiografia_EGonzález.html#LibrosG">Libros - Emanuel González</a> | 
-      <a href="MiBiografia_ECamaño.html#LibrosC">Libros - Edward Camaño</a> |
-      <a href="MiBiografia_EGonzález.html#PeliculasG">Películas - Emanuel González</a> | 
-      <a href="MiBiografia_ECamaño.html#PeliculasC">Películas - Edward Camaño</a> |
-      <a href="MiBiografia_EGonzález.html#CancionesG">Canciones - Emanuel González</a> | 
-      <a href="MiBiografia_ECamaño.html#CancionesC">Canciones - Edward Camaño</a> |
+      <a href="Biografia(home).html#SobreMi">Sobre mí</a> | 
+      <a href="Biografia(home).html#Libros">Libros</a> | 
+      <a href="Biografia(home).html#Peliculas">Películas</a> | 
+      <a href="Biografia(home).html#Canciones">Canciones</a> | 
       <a href="Currículo HTML.html">Datos Personales</a> | 
       <a href="Tema.html">Deportes</a>
     </nav>
@@ -33,10 +29,9 @@
 
     <!-- Sección con los enlaces a las biografías -->
     <section>
-      <h2>Biografías disponibles</h2>
+      <h2>Biografía disponible</h2>
       <ol>
-        <li><a href="MiBiografia_ECamaño.html">Biografía de Edward Camaño</a></li>
-        <li><a href="MiBiografia_EGonzález.html">Biografía de Emanuel González</a></li>
+        <li><a href="Biografia(home).html">Biografía de Edward Camaño & Emanuel González</a></li>
       </ol>
     </section>
 
@@ -56,4 +51,5 @@
   </footer>
 
 </body>
+
 </html>
