--- a/Currículo HTML.html
+++ b/Currículo HTML.html
@@ -9,6 +9,7 @@
     <header>
         <h1>Formulario</h1>
         <nav>
+            <a href="index.html">Inicio</a> |
             <a href="Biografia(home).html#SobreMi">Sobre mí</a> |
             <a href="Biografia(home).html#Libros">Mis libros favoritos</a> |
             <a href="Biografia(home)#Peliculas">Mis películas favoritas</a> |
@@ -70,6 +71,7 @@
 </body>
 
 </html>
+
 
 
 
