--- a/Biografia(home).html
+++ b/Biografia(home).html
@@ -9,6 +9,7 @@
   <header>
     <h1>Biografías Personales</h1>
     <nav>
+      <a href="index.html">Inicio</a> |
       <a href="#SobreMi">Sobre mí</a> |
       <a href="#Libros">Mis libros favoritos</a> |
       <a href="#Peliculas">Mis películas favoritas</a> |
@@ -368,6 +369,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
