--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a href="Biografia(home).html#Libros">Libros</a> | 
       <a href="Biografia(home).html#Peliculas">Películas</a> | 
       <a href="Biografia(home).html#Canciones">Canciones</a> | 
+      <a href="Biografia(home).html#Multimedia">Canciones</a> |
       <a href="Currículo HTML.html">Datos Personales</a> | 
       <a href="Tema.html">Deportes</a>
     </nav>
@@ -53,3 +54,4 @@
 </body>
 
 </html>
+
